--- a/writenow-frontend/src/locales/zh-CN.json
+++ b/writenow-frontend/src/locales/zh-CN.json
@@ -5,7 +5,73 @@
     "language": "语言",
     "clear": "清空",
     "apply": "应用",
-    "applyReconnect": "应用并重连"
+    "applyReconnect": "应用并重连",
+    "send": "发送",
+    "cancel": "取消"
+  },
+  "aiPanel": {
+    "title": "AI",
+    "collapsePanel": "收起 AI 面板",
+    "toggleContext": "切换上下文预览",
+    "inputPlaceholder": "输入指令…（/ 查看命令，Ctrl+Enter 发送）",
+    "emptyState": "输入指令开始对话，或使用 / 查看可用命令。",
+    "selectMode": "选择模式",
+    "selectModel": "选择模型",
+    "selectSkill": "选择 Skill",
+    "loadingSkills": "加载…",
+    "noSkills": "无 Skill",
+    "status": {
+      "streaming": "输出中…",
+      "thinking": "思考中…",
+      "error": "错误"
+    },
+    "mode": {
+      "agent": "Agent",
+      "plan": "Plan",
+      "ask": "Ask"
+    },
+    "review": {
+      "title": "正在审阅 AI 更改",
+      "accept": "接受",
+      "reject": "拒绝",
+      "original": "原始内容",
+      "suggested": "建议内容"
+    },
+    "slashCommands": {
+      "title": "斜杠命令",
+      "continue": "继续写作",
+      "continueDesc": "让 AI 继续当前内容",
+      "polish": "润色",
+      "polishDesc": "改进文字表达和流畅度",
+      "rewrite": "重写",
+      "rewriteDesc": "用不同方式重新表达",
+      "expand": "扩写",
+      "expandDesc": "增加更多细节和内容",
+      "summarize": "总结",
+      "summarizeDesc": "提取要点生成摘要",
+      "brainstorm": "头脑风暴",
+      "brainstormDesc": "生成创意点子",
+      "custom": "自定义指令",
+      "customDesc": "输入你的具体需求",
+      "navigation": "↑↓ 导航 · Enter 选择 · Esc 关闭"
+    },
+    "context": {
+      "title": "上下文预览",
+      "enabled": "记忆注入已启用",
+      "disabled": "记忆注入已禁用",
+      "refresh": "刷新预览",
+      "loading": "正在加载…",
+      "empty": "当前没有会被注入的记忆",
+      "emptyDisabled": "记忆注入已禁用，不会有记忆被注入",
+      "hint": "记忆帮助 AI 更好地理解你的偏好和风格",
+      "info": "这些记忆将被注入到下一次 AI 运行的上下文中。你可以在「设置 → 记忆」中管理注入行为。"
+    },
+    "memory": {
+      "preference": "偏好",
+      "feedback": "反馈",
+      "style": "风格",
+      "learned": "学习"
+    }
   },
   "activityBar": {
     "files": "文件",
